--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "tailwindcss": "^3.3.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
