--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "autoprefixer": "^10.4.16",
+    "little-state-machine": "^4.8.0",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
     "zod": "^3.22.2"
   },
