--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
+    "react-phone-number-input": "^3.3.6",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
     "zod": "^3.22.2"
