--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "autoprefixer": "^10.4.16",
+    "bsn-js": "^1.0.4",
     "little-state-machine": "^4.8.0",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
