--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@types/react-datepicker": "^4.15.1",
     "autoprefixer": "^10.4.16",
     "bsn-js": "^1.0.4",
     "little-state-machine": "^4.8.0",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
