--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-datepicker": "^4.15.1",
     "autoprefixer": "^10.4.16",
     "bsn-js": "^1.0.4",
+    "clsx": "^2.0.0",
     "little-state-machine": "^4.8.0",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
